--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,18 @@
-import Bleed from 'nextra-theme-docs/bleed'
+# Introduction
 
-# Nextra
+Hey there, [company name]! Welcome to your LaunchDarkly Lighthouse training.
 
-**Nextra** is a [Next.js](https://nextjs.org) based static site generator.
+Today, you're going to learn how you can use LaunchDarkly's feature management system to improve your software development practices.
 
-It supports Markdown and React components ([MDX](/features/mdx)), automatically generated [sidebar and anchor links](/get-started#sidebar-and-anchor-links), file-system based routing, built-in syntax highlighting, image optimization, custom layouts, i18n, and all the features you love about Next.js.
+The professional services team at LaunchDarkly has tailored this application to demonstrate the core capabilities you would like to improve within your team. Each example provided will be delivered through an interactive code sample in your native programming language, like the one below:
 
-Here's what you will get in 1 minute:
+![screenshot of vscode](/images/interactive-code-sample.png)
 
-<Bleed>![Nextra Example](../public/demo.png)</Bleed>
+Over the course of this training, we'll use the LaunchDarkly SDK and Feature Flags to address the following topics
+
+- Separating Deploy from Relase
+- Targeted Rollouts
+- Testing in Production
+- Prerequisite and Keystone Flags
+
+We hope you'll find something new and exciting within! Let's get started.
