Add API input component

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,11 @@
+import APIServerInput from '../components/APIServerInput';
+
 # Introduction
 
 Hey there, [company name]! Welcome to your LaunchDarkly Lighthouse training.
+
+Testing API input component:
+<APIServerInput /> 
 
 Today, you're going to learn how you can use LaunchDarkly's feature management system to improve your software development practices.
 
