--- a/pages/lessons/phase-0/step-3.mdx
+++ b/pages/lessons/phase-0/step-3.mdx
@@ -1,8 +1,16 @@
+import SyntaxHighlighter from 'react-syntax-highlighter';
+import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
+
 # Step 3: Initialize the LaunchDarkly Client
 
 Finally, we'll initialize the **LaunchDarkly Client** by passing it our `SDK_KEY` variable on line 18 of `module01/index.js`
 
-[screenshot or formatted code sample of line 18]
+<SyntaxHighlighter showLineNumbers="true" startingLineNumber={17} language="javascript" style={docco}>
+{
+`  // STEP 3: Intialize the SDK client
+  const ldclient = ld.init();`
+}
+</SyntaxHighlighter>
 
 Assuming we did everything correctly, the LaunchDarkly Client will initialize as soon as we save this file— all of your Project's **Feature Flags** and the rules associated with your **Environment** will be fetched and cached locally to your application.
 
@@ -12,6 +20,11 @@ To learn more about the architecture we use to deliver and evaluate your feature
 
 If you haven't already, go ahead and pass the `SDK_KEY` variable to the `ld.init` function on line 18 of `module01/index.js`. Here's what it should look like:
 
-[screenshot/formatted sample of correct code]
+<SyntaxHighlighter showLineNumbers="true" startingLineNumber={17} language="javascript" style={docco}>
+{
+`  // STEP 3: Intialize the SDK client
+  const ldclient = ld.init(SDK_KEY);`
+}
+</SyntaxHighlighter>
 
 We're almost ready, but before we save our progress, let's add a console log to our terminal output to ensure the **LaunchDarkly Client** is defined properly, since we'll need it for the next phases.
