--- a/pages/lessons/phase-0/step-4.mdx
+++ b/pages/lessons/phase-0/step-4.mdx
@@ -1,14 +1,31 @@
+import SyntaxHighlighter from 'react-syntax-highlighter';
+import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
+
 # Step 4: Verify it's working
 
 When the **LaunchDarkly Client** is properly defined, it will emit a `ready` event to let you know it's ready to use. This is one a few different events at your disposal.
 
 We've added useful listener methods to the SDK to allow you to hook into the events emitted by the client, allowing you to execute code at specific phases of the client lifecyclee. We've implemented an event listener for the `ready` event, which signifies that the client is properly initialized and ready to be used for feature flag evaluations, on line 21 of `module01/index.js`.
 
-[screenshot/formatted code sample of line 21]
+<SyntaxHighlighter showLineNumbers="true" startingLineNumber={20} language="javascript" style={docco}>
+{
+`  // STEP 4: Print a test message to indicate the client has initialized successfully
+  ldclient.on('ready', () => {
+    \ 
+  });`
+}
+</SyntaxHighlighter>
 
 Let's add a console log inside of this listener that let's us know our Client initialized properly.
 
-[screenshot/formatted code sample of correct code]
+<SyntaxHighlighter showLineNumbers="true" startingLineNumber={20} language="javascript" style={docco}>
+{
+`  // STEP 4: Print a test message to indicate the client has initialized successfully
+  ldclient.on('ready', () => {
+    console.log('LD INITIALIZED');
+  });`
+}
+</SyntaxHighlighter>
 
 That's it! Go ahead and save your changes to `module01/index.js` and we'll make sure your client initialized properly!
 
