Styles for API server component

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,14 +4,15 @@ import APIServerInput from '../components/APIServerInput';
 
 Hey there, [company name]! Welcome to your LaunchDarkly Lighthouse training.
 
-Testing API input component:
-<APIServerInput /> 
-
 Today, you're going to learn how you can use LaunchDarkly's feature management system to improve your software development practices.
 
 The professional services team at LaunchDarkly has tailored this application to demonstrate the core capabilities you would like to improve within your team. Each example provided will be delivered through an interactive code sample in your native programming language, like the one below:
 
 ![screenshot of vscode](/images/interactive-code-sample.png)
+
+In order to connect this application to the code you'll be working with, please enter the URL for your server below:
+
+<APIServerInput />
 
 Over the course of this training, we'll use the LaunchDarkly SDK and Feature Flags to address the following topics
 
