--- a/pages/lessons/phase-1/step-2.mdx
+++ b/pages/lessons/phase-1/step-2.mdx
@@ -30,7 +30,11 @@ If your code matches, go ahead and save your file. We'll show you what your flag
 
 [text conditional based on feature flag being added] Great work! Now that our flag is implemented, let's go ahead and turn it on. 
 
-To do that, we'll head back to the targeting settings for our flag, toggle the Targeting switch to on, and click the save button. Now let's see what our flag evaluates to:
+To do that, we'll head back to the targeting settings for our flag, toggle the Targeting switch to on, and click the save button:
+
+![Toggling Feature Flag Animation](/images/toggle-flag.gif)
+
+ Now let's see what our flag evaluates to:
 
 [same dynamic element now returning true]
 
