Add flag key input component

--- a/pages/lessons/phase-1/step-1.mdx
+++ b/pages/lessons/phase-1/step-1.mdx
@@ -1,3 +1,5 @@
+import FlagKeyInput from '../../../components/FlagKeyInput'
+
 # Step 1: Create Flag
 
 Follow the steps below to create your release flag.
@@ -16,6 +18,7 @@ To learn more about these settings, check out the optional content below.
 - Click the Save flag button
 [screenshot highlighting button]
 - Once your flag is saved, you'll be brought to the targeting settings for your flag. Click on the feature flag key located directly beneath the Flag name to copy it to your clip board. You can paste it in the box below for safe keeping:
-[paste box that uses flag key for next code sample]
+
+<FlagKeyInput />
 
 Let's be sure to leave the flag targeting settings open in our browser windwow, we'll return to them shortly.
