stylistic changes in phases 0 & 1, breaking down phase 2

--- a/pages/lessons/phase-0/step-2.mdx
+++ b/pages/lessons/phase-0/step-2.mdx
@@ -19,8 +19,7 @@ If not, switch to the correct project
 
 Next, we'll use the **Global Search** keyboard shorcut: 
 
-command + k (mac)
-ctrl + k (pc)
+`command + k` (mac) / `ctrl + k` (pc)
 
 You'll see the following pop up in your LaunchDarkly Project:
 
