--- a/pages/lessons/phase-1/Introduction.mdx
+++ b/pages/lessons/phase-1/Introduction.mdx
@@ -12,6 +12,6 @@ In this exercise, we'll implement a feature flag and mitigate the risk around re
 
 One of the primary benefits of using LaunchDarkly is that it enables **Feature Management** at runtime, which sets it apart from other risk mitigation practices in development that tend to happen at build time or as part of deployment.
 
-The speed, efficiency, and reliability of LaunchDarkly makes it possible to quickly roll back changes in Production environments— without having to roll back an entire deployment. So your team can focus on the problem code, rather than firefighting.
+LaunchDarkly makes it possible to quickly roll back changes in Production environments— without having to roll back an entire deployment. So your team can focus on the problem code, rather than firefighting.
 
 To demonstrate how this is possible, we'll first need to create a feature flag in our **Project**.
