add gif in phase 2, step 3

--- a/pages/lessons/phase-1/step-3.mdx
+++ b/pages/lessons/phase-1/step-3.mdx
@@ -20,9 +20,9 @@ If your code matches, go ahead and save your file. Remember, saving = deploying 
 
 Now that we've fixed our code and committed the changes, let's turn our feature flag back on in the flag targeting settings.
 
-[screenshot of targeting setting]
+![Toggle Feature Flag](/images/toggle-flag.gif)
 
-Great, not that our flag is back on, let's take another look at our app:
+Great, now that our flag is back on, let's take another look at our app:
 
 [mobile device silhoutte, smiley face emoji with sunglasses appears]
 
