--- a/pages/lessons/phase-2/Introduction.mdx
+++ b/pages/lessons/phase-2/Introduction.mdx
@@ -4,7 +4,7 @@ Okay, so, we've learned about how LaunchDarkly allows us to separate our code de
 
 LaunchDarkly allows us to do a lot more with our feature flags than merely toggling them on and off. For this phase, we'll build on what we've learned so far by applying some targeting rules to our feature flags. 
 
-We'll refer to this capability as **Targeting Rollouts.** This capability enbles us to use rulesets of varying complexity to affect which variation gets served to a subset of our users. This is useful for a variety or reasons, but a few examples might be:
+We'll refer to this capability as **Targeting Rollouts.** This capability enables us to use rulesets of varying complexity to affect which variation gets served to a subset of our users. This is useful for a variety or reasons, but a few examples might be:
 
 - Turning on a feature only for users with specific app version
 - Exposing specific functionality to a geographic reason
