--- a/pages/lessons/phase-1/step-2.mdx
+++ b/pages/lessons/phase-1/step-2.mdx
@@ -1,6 +1,5 @@
 import SyntaxHighlighter from 'react-syntax-highlighter';
 import { docco } from 'react-syntax-highlighter/dist/cjs/styles/hljs';
-import { insertSingleValue } from '../../../lib/codeHelpers';
 import { getFirstFlagFromLocalStorage } from '../../../lib/flagHelpers';
 
 # Step 2: Add feature flag to code
@@ -29,7 +28,7 @@ For the sake of this example, we've taken care of teh **evaluation context** and
 
 <SyntaxHighlighter showLineNumbers="true" startingLineNumber={10} language="javascript" style={docco}>
 {
-insertSingleValue`const flagValue = await ldclient.variation('${getFirstFlagFromLocalStorage()}', userCtx, false);`
+`const flagValue = await ldclient.variation('${getFirstFlagFromLocalStorage()}', userCtx, false);`
 }
 </SyntaxHighlighter>
 
