Fix broken key/value component

--- a/pages/lessons/phase-1/step-2.mdx
+++ b/pages/lessons/phase-1/step-2.mdx
@@ -50,4 +50,4 @@ To do that, we'll head back to the targeting settings for our flag, toggle the T
 
  Now let's see what our flag evaluates to:
 
-<FlagKeyAndValue moduleId="2" /> // Second instance on the page is not working, need to investigate this
+<FlagKeyAndValue moduleId="2" />
