Add broken feature component to illustrate release flags

--- a/pages/lessons/phase-1/step-3.mdx
+++ b/pages/lessons/phase-1/step-3.mdx
@@ -1,6 +1,8 @@
+import BrokenFeatureModule from '../../../components/BrokenFeatureModule';
+
 We just turned that flag on without knowing what part of our app it's controlling, let's check to make sure we didn't mess anything up.
 
-[mobile device silhoutte appears, fire appears on screen]
+<BrokenFeatureModule moduleId="2" />
 
 Oh no! It looks like we turned on a broken feature. Quick, turn your flag off!
 
