--- a/pages/lessons/phase-1/step-3.mdx
+++ b/pages/lessons/phase-1/step-3.mdx
@@ -26,7 +26,7 @@ Now that we've fixed our code and committed the changes, let's turn our feature 
 
 Great, now that our flag is back on, let's take another look at our app:
 
-<BrokenFeatureModule moduleId="2" /> // Same problem with duplicate components, need to investigate the useEffect hack
+<BrokenFeatureModule moduleId="2" />
 
 Our feature is looking pretty good, if you ask me. 
 
