--- a/pages/lessons/phase-3/exercise.mdx
+++ b/pages/lessons/phase-3/exercise.mdx
@@ -1,3 +1,5 @@
+import BrokenFeatureModule from '../../../components/BrokenFeatureModule';
+
 # Exercise: Testing in Production
 
 At a minimum, LaunchDarkly gives us a new worst-case-scenario for a deploy failure: a killswitch. With LaunchDarkly in our Production environment, any feature behind a flag can simply be disabled. In this reality, what's the purpose of a QA environment at all. We don't need to maintain infrastructure purely to mimic the conditions of production, simply so we can troubleshoot an issue without impacting real traffic.
@@ -26,7 +28,7 @@ Don't forget to turn the flag back on before saving
 
 Ok, our flag is on but it's currently returning `false` for all rulesets. We grab an Android test device and login with our production credentials:
 
-[mobile device silhouette with smiley face]
+<BrokenFeatureModule moduleId="4" />
 
 Everything is looking good. You check the app version and it's `2.0`, so this device should be able to recreate the issue. To do this, we're going to use the **Individual User Targeting** feature. Before we can use that, let's define our production user on line[x] in `module04/index.js`:
 
